package jp.co.biglobe.warikan.domain.drinking_party;

import lombok.AllArgsConstructor;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.ToString;

@AllArgsConstructor
@ToString
@EqualsAndHashCode
public class DrinkingPartyId {
    @Getter
    private final String value;
}
