package jp.co.biglobe.warikan.domain.drinking_party;

public interface DrinkingPartyIdRepository {
    DrinkingPartyId allocate();
}
