@startuml

title 割り勘ドメインモデル

namespace domain {
    namespace warikan {
        class ParticipantsOfHighPaymentType

        class ParticipantsOfMiddlePaymentType

        class ParticipantsOfLowPaymentType

        class WarikanService {
            + WarikanResult calculate(\n    WarikanDrinkingPartyId,\n    BillingAmount,\n    ParticipantsOfHighPaymentType,\n    ParticipantOfMiddlePaymentType,\n    ParticipantsOfLowPaymentType)
            + void change(\n    WarikanDrinkingPartyId,\n    PaymentWeight,\n    PaymentWeight,\n    PaymentWeight)
        }

        class BillingAmount {
            - Money
        }

        class DrinkingPartyIdTranslator {
            + WarikanDrinkingPartyId translate(DrinkingPartyId)
        }

        class WarikanDrinkingPartyId

        interface PaymentWeightRepository {
            + PaymentWeights findById(WarikanDrinkingPartyId)
            + void change(\n    WarikanDrinkingPartyId,\n    PaymentWeight,\n    PaymentWeight,\n    PaymentWeight)
        }

        class PaymentWeights

        class PaymentWeight

        class WarikanResult

        class PaymentAmountOfHighPaymentType {
            - Money
        }

        class PaymentAmountOfMiddlePaymentType {
            - Money
        }

        class PaymentAmountOfLowPaymentType {
            - Money
        }

        class PaymentAmountPerPaymentType

        class Shortfall {
            - Money
        }
    }

    namespace drinking_party {
        class DrinkingPartyId

        interface DrinkingPartyIdRepository {
            + DrinkingPartyId allocate()
        }
    }
}

domain.warikan.WarikanService -u-> domain.warikan.ParticipantsOfHighPaymentType
domain.warikan.WarikanService -u-> domain.warikan.ParticipantsOfMiddlePaymentType
domain.warikan.WarikanService -u-> domain.warikan.ParticipantsOfLowPaymentType
domain.warikan.WarikanService -u-> domain.warikan.BillingAmount

domain.warikan.WarikanService --> domain.warikan.WarikanResult
domain.warikan.WarikanService -l-> domain.warikan.WarikanDrinkingPartyId
domain.warikan.WarikanService --> domain.warikan.PaymentWeightRepository
domain.warikan.WarikanResult --> domain.warikan.Shortfall
domain.warikan.WarikanResult --> domain.warikan.PaymentAmountPerPaymentType
domain.warikan.PaymentAmountPerPaymentType --> domain.warikan.PaymentAmountOfHighPaymentType
domain.warikan.PaymentAmountPerPaymentType --> domain.warikan.PaymentAmountOfMiddlePaymentType
domain.warikan.PaymentAmountPerPaymentType --> domain.warikan.PaymentAmountOfLowPaymentType
domain.warikan.PaymentWeightRepository -u-> domain.warikan.WarikanDrinkingPartyId
domain.warikan.PaymentWeightRepository --> domain.warikan.PaymentWeights
domain.warikan.PaymentWeights -r-> domain.warikan.PaymentWeight

domain.warikan.DrinkingPartyIdTranslator -d-> domain.drinking_party.DrinkingPartyId
domain.warikan.DrinkingPartyIdTranslator -d-> domain.warikan.WarikanDrinkingPartyId

domain.drinking_party.DrinkingPartyIdRepository --> domain.drinking_party.DrinkingPartyId

@enduml